style.css
/* style.css */

/*import Roboto font */
@import url('https://googleapis.com');

body {
    /* needed because many browsers apply an automatic 8px margin */
    margin: 0;
    font-family: 'Roboto', sans-serif;
}

/* remove default styling from unordered lists */
ul {
    list-style-type: none;
    margins: 0;
    padding: 0;
}

a {
    text-decoration: none;
}

/* header and hero */
.header,
.hero {
    background-color: #1F2937;
    display: flex;
    flex-basis: 80%;
    padding: 0 clamp(1rem, 10vw, 25%);
    justify-content: space-between;
}

.header {

}

#header-logo {
    font-size: 24px;
    color: #F9FAF8;
}

.header-links {
    display: flex;
}

.hero {
    justify-content: space-between;
    gap: 2rem;
    padding-top: 4rem;
    padding-bottom: 8rem;
    align-items: stretch;
}

.hero-cta,
.hero-img {
    display: flex;
    height: 11rem;
    flex-basis: 50%;
    /* border: 1px solid red; */
}

.hero-cta {
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
}

.hero-cta p {
    font-size: 18px;
    color: #E5E7EB;
}

.hero-cta button {
    color: #F9FAF8;
    background-color: #3882F6;
    font-size: 16px;
    font-weight: 600;
    padding: 0.5rem 2rem;
    border-radius: 8px;
}

#hero-main {
    margin: 0;
    font-size: 48px;
    color: #F9FAF8;
}

.hero-img {
    background-color: #6d747d;
    justify-content: center;
    align-items: center;
}

/* information section */
.information-section {
    display: flex;
}

.card-container {

}

/* testimonial section */
.testimonial-container {
    display: flex;
    background-color: #E5E7EB;
}

/* call to action section */

.call-to-action {
    display: flex;
    background-color: #3882F6;
}

.left-side-cta {

}

.call-to-action-button {

}

/* footer */

.footer {
    display: flex;
    background-color: #1F2937;
}

